templatemo_589_lugx_gaming/k8s/static-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  namespace: static
  labels:
    app: static-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
        - name: static-site
          image: <DOCKER_USERNAME>/static-site:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: static
spec:
  selector:
    app: static-site
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
