templatemo_589_lugx_gaming/k8s/static-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-ingress
  namespace: static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static-site
                port:
                  number: 80
